# powabetz

./: .env.example  .gitignore  CLAUDE.md  EXIT_SALE_REPORT.md  FIXES.md  README.md  TempBet365BetBuilder  decision.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build-window.yml
extension/: README.md  background.js  content.js  manifest.json  popup.html  popup.js
proxy/: README.md  server.js  worker.js  wrangler.toml
src/: App.tsx  api.ts  styles.css  toast.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: apifootball.rs  commands.rs  db.rs  features.rs  grok.rs  ingest.rs  ingeststats.rs  lib.rs  llm.rs  main.rs  models.rs  montecarlo.rs  odds.rs  propline.rs  settle.rs  weather.rs
src/components/: CustomSlip.tsx  ErrorBoundary.tsx  ForecastPanel.tsx  Hint.tsx  History.tsx  Ingest.tsx  IngestedStats.tsx  Inspector.tsx  Ledger.tsx  Lineups.tsx  Live.tsx  MyPicks.tsx  Newsfeed.tsx  PicksBoard.tsx  PropLine.tsx  Results.tsx  Settings.tsx  Spinner.tsx  StakeBumps.tsx  TicketAnalysis.tsx  Tracker.tsx
