[package]
name = "powabet"
version = "1.0.0"
description = "Click-driven football player-prop research"
authors = ["powabet"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "powabet_lib"
# Desktop-only: drop "staticlib" (iOS) — it builds a ~340MB archive we don't need.
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
futures = { version = "0.3", default-features = false, features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
dotenvy = "0.15"
tiny_http = "0.12"
chrono-tz = "0.10.4"

[profile.release]
strip = true

# Keep dev builds small — full debuginfo balloons target/ to multiple GB.
[profile.dev]
debug = false
incremental = false
strip = "debuginfo"
