[package]
name = "powabet"
version = "1.0.0"
description = "Click-driven football player-prop research"
authors = ["powabet"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "powabet_lib"
# Desktop-only: drop "staticlib" (iOS) — it builds a ~340MB archive we don't need.
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
futures = { version = "0.3", default-features = false, features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
dotenvy = "0.15"
tiny_http = "0.12"
chrono-tz = "0.10.4"

# Desktop-only guard: a second launch focuses the running window instead of
# starting a rival process that fights over the ingest port and SQLite WAL
# (which presented as a frozen, non-responsive window).
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[profile.release]
strip = true

# Keep dev builds small — full debuginfo balloons target/ to multiple GB.
[profile.dev]
debug = false
incremental = false
strip = "debuginfo"
# Debug builds ran the Monte-Carlo engine ~30x slower than release — enough to
# freeze Apex/Darwin during development. opt-level 1 keeps compiles quick while
# making the numeric loops usable; release builds are unaffected.
opt-level = 1
